[M74] Add ENABLE_LIBAOM_DECODER buildflag
CHERRYPICK
Not able to do a clean cherrypick. These files required manual merge:
  media/media_options.gni
  third_party/libaom/options.gni

Currently, ENABLE_AV1_DECODER is both used to signal that we have
enabled AV1 decoding, and to guard libaom build files. This makes it
impossible to turn off libaom without also turning off AV1 decoding.

This CL adds a new ENABLE_LIBAOM_DECODER flag, and changes the way we
compute ENABLE_AV1_DECODER. This allows for independent compilation
flags for dav1d and libaom, without affecting general AV1 code (such
as codec parsing, test cases, etc).

Bug: 924370
Change-Id: I0cfeb4e0033d494bf29956a305726c3a47fbb166
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1540280
Commit-Queue: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Johann Koenig <johannkoenig@google.com>
Reviewed-by: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Cr-Commit-Position: refs/heads/master@{#645082}
(cherry picked from commit 6a5af2745f4ab302c245b3cf57ab257e38029356 [formerly 642e97d190356d64e2e8df3ad500ea78a05abb1a])

TBR: tguilbert@chromium.org
TBR: johannkoenig@google.com
TBR: vasilii@chromium.org
Change-Id: I0cfeb4e0033d494bf29956a305726c3a47fbb166
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1547756
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#589}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 499783256fc8cf6cb2eeb86ce35c56949f19ba28

--- a/media/BUILD.gn
+++ b/media/BUILD.gn
@@ -23,6 +23,7 @@ buildflag_header("media_buildflags") {
     "ENABLE_CDM_HOST_VERIFICATION=$enable_cdm_host_verification",
     "ENABLE_CDM_STORAGE_ID=$enable_cdm_storage_id",
     "ENABLE_DAV1D_DECODER=$enable_dav1d_decoder",
+    "ENABLE_AV1_DECODER=$enable_av1_decoder",
     "ENABLE_DOLBY_VISION_DEMUXING=$enable_dolby_vision_demuxing",
     "ENABLE_FFMPEG=$media_use_ffmpeg",
     "ENABLE_FFMPEG_VIDEO_DECODERS=$enable_ffmpeg_video_decoders",
