--- a/media/renderers/BUILD.gn
+++ b/media/renderers/BUILD.gn
@@ -41,12 +41,13 @@ source_set("renderers") {
     "//components/viz/client",
     "//gpu/command_buffer/client:gles2_interface",
     "//gpu/command_buffer/common",
+    "//media:media_buildflags",
     "//media/audio",
     "//media/base",
     "//media/filters",
     "//media/video",
     "//skia",
-    "//third_party/libaom:av1_buildflags",
+    "//third_party/libaom:libaom_buildflags",
     "//third_party/libyuv",
     "//ui/gfx:geometry_skia",
     "//ui/gfx:memory_buffer",
