--- a/content/test/BUILD.gn
+++ b/content/test/BUILD.gn
@@ -1011,6 +1011,7 @@ test("content_browsertests") {
     "//gpu/ipc/host",
     "//ipc",
     "//ipc:test_support",
+    "//media:media_buildflags",
     "//media:test_support",
     "//media/webrtc",
     "//mojo/core/embedder",
@@ -1044,7 +1045,6 @@ test("content_browsertests") {
     "//third_party/blink/public:blink",
     "//third_party/blink/public:core_mojo_bindings",
     "//third_party/leveldatabase",
-    "//third_party/libaom:av1_buildflags",
     "//third_party/mesa_headers",
     "//third_party/zlib",
     "//ui/accessibility",
