--- a/media/filters/BUILD.gn
+++ b/media/filters/BUILD.gn
@@ -101,12 +101,12 @@ jumbo_source_set("filters") {
   deps = [
     "//cc/base",  # For MathUtil.
     "//gpu/command_buffer/common",
+    "//media:media_buildflags",
     "//media/base",
     "//media/cdm",
     "//media/formats",
     "//media/video",
     "//skia",
-    "//third_party/libaom:av1_buildflags",
     "//third_party/libyuv",
   ]
 
@@ -155,7 +155,7 @@ jumbo_source_set("filters") {
     deps += [ "//third_party/libvpx" ]
   }
 
-  if (enable_av1_decoder) {
+  if (enable_libaom_decoder) {
     sources += [
       "aom_video_decoder.cc",
       "aom_video_decoder.h",
@@ -399,12 +399,12 @@ source_set("unit_tests") {
     sources += [ "vpx_video_decoder_unittest.cc" ]
   }
 
-  if (enable_av1_decoder) {
+  if (enable_libaom_decoder) {
     sources += [ "aom_video_decoder_unittest.cc" ]
+  }
 
-    if (enable_dav1d_decoder) {
-      sources += [ "dav1d_video_decoder_unittest.cc" ]
-    }
+  if (enable_dav1d_decoder) {
+    sources += [ "dav1d_video_decoder_unittest.cc" ]
   }
 
   if (current_cpu != "arm" && is_linux) {
