--- a/media/formats/BUILD.gn
+++ b/media/formats/BUILD.gn
@@ -74,9 +74,9 @@ source_set("formats") {
   ]
 
   deps = [
+    "//media:media_buildflags",
     "//media/base",
     "//skia",
-    "//third_party/libaom:av1_buildflags",
     "//third_party/libwebm",
   ]
 
