--- a/media/test/BUILD.gn
+++ b/media/test/BUILD.gn
@@ -42,10 +42,11 @@ source_set("pipeline_integration_test_base") {
     deps = [
       "//base",
       "//base/test:test_support",
+      "//media:media_buildflags",
       "//media:test_support",
       "//testing/gmock",
       "//testing/gtest",
-      "//third_party/libaom:av1_buildflags",
+      "//third_party/libaom:libaom_buildflags",
       "//url",
     ]
   }
@@ -67,9 +68,9 @@ source_set("pipeline_integration_tests") {
     deps = [
       ":pipeline_integration_test_base",
       "//base",
+      "//media:media_buildflags",
       "//media:test_support",
       "//media/mojo/clients",
-      "//third_party/libaom:av1_buildflags",
 
       # Needed for the opus_config
       "//third_party/opus",
@@ -121,6 +122,7 @@ source_set("mojo_pipeline_integration_tests") {
       ":pipeline_integration_test_base",
       "//base",
       "//base/test:test_support",
+      "//media:media_buildflags",
       "//media:test_support",
       "//media/mojo/clients",
       "//media/mojo/interfaces",
@@ -130,7 +132,6 @@ source_set("mojo_pipeline_integration_tests") {
       "//services/service_manager/public/cpp",
       "//services/service_manager/public/cpp/test:test_support",
       "//testing/gtest",
-      "//third_party/libaom:av1_buildflags",
       "//ui/gfx:test_support",
       "//ui/gfx/geometry",
 
@@ -219,7 +220,6 @@ foreach(variant, pipeline_integration_fuzzer_variants) {
       # header for pipeline_integration_test_base.h.  This should be
       # moved into the .cc file to avoid the extra dependency here.
       "//testing/gmock",
-      "//third_party/libaom:av1_buildflags",
       "//ui/gfx:test_support",
     ]
 
