[M74] Use dav1d by default
CHERRYPICK
Not able to do a clean cherrypick. These files required manual merge:
  media/media_options.gni
  third_party/libaom/options.gni

This CL turns on dav1d by default. It also disables libaom to save on
binary size.

Bug: 924370
Change-Id: I4d331a3b66fe6031930f5f56880866b9a3c92df8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1539901
Commit-Queue: Chrome Cunningham <chcunningham@chromium.org>
Auto-Submit: Thomas Guilbert <tguilbert@chromium.org>
Reviewed-by: Tom Finegan <tomfinegan@chromium.org>
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Cr-Commit-Position: refs/heads/master@{#645600}
(cherry picked from commit 24cf0d62dcd3d6e27c28e2bfa732315f5853232b [formerly ede4345734371ac35b4e50cea7ef3332dabd54d5])

TBR: tomfinegan@chromium.org
Change-Id: I4d331a3b66fe6031930f5f56880866b9a3c92df8
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1548047
Reviewed-by: Chrome Cunningham <chcunningham@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#590}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: dc0f34b189f8d81bfccba9402008dcb0413674fc

--- a/media/media_options.gni
+++ b/media/media_options.gni
@@ -88,12 +88,14 @@ declare_args() {
   # TODO(sanfin): Remove this flag when all builds enable CMA.
   is_cast_using_cma_backend = true
 
-  # Dav1d is only enabled when av1 decoding is enabled.
   if (is_win && target_cpu == "arm64") {
     # TODO: Enable dav1d for Windows ARM64. https://crbug.com/941022
     enable_dav1d_decoder = false
+  } else if (is_fuchsia && target_cpu == "x64") {
+    # TODO: Fix media_unittests for fuchsia X64. https://crbug.com/930300
+    enable_dav1d_decoder = false
   } else {
-    enable_dav1d_decoder = enable_libaom_decoder
+    enable_dav1d_decoder = !is_android && !is_ios
   }
 }
 
