--- a/device/BUILD.gn
+++ b/device/BUILD.gn
@@ -218,6 +218,11 @@ test("device_unittests") {
     ]
   }
 
+  if (is_chromeos) {
+    sources += [ "bluetooth/chromeos/bluetooth_utils_unittest.cc" ]
+    deps += [ "//chromeos/constants" ]
+  }
+
   if ((is_chromeos || is_linux) && use_dbus) {
     configs += [ "//build/config/linux/dbus" ]
 
