[Chromeshine] Record UsageStats events in a histogram
Add a histogram and enum that tracks important UsageStats-related events,
e.g. token tracking, consent, suspensions.

Bug: 943618
Change-Id: I81eec695e1b5d49b5d8196e88034d6a43124ec5d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1529626
Commit-Queue: Patrick Noland <pnoland@chromium.org>
Reviewed-by: Brian White <bcwhite@chromium.org>
Reviewed-by: Filip Gorski <fgorski@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#645528}(cherry picked from commit b31022a87a57e0a7bf9c048749cf4dc243b06bac [formerly 172d187b408e314627e7ea9e3300bf5b1acd3091])
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1549286
Reviewed-by: Patrick Noland <pnoland@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#624}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 9e69a5536dbe9d1cfd399a0cc4f604ae814fd457

--- a/chrome/android/java_sources.gni
+++ b/chrome/android/java_sources.gni
@@ -1630,6 +1630,8 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/usage_stats/UsageStatsBridge.java",
   "java/src/org/chromium/chrome/browser/usage_stats/UsageStatsConsentActivity.java",
   "java/src/org/chromium/chrome/browser/usage_stats/UsageStatsConsentDialog.java",
+  "java/src/org/chromium/chrome/browser/usage_stats/UsageStatsMetricsEvent.java",
+  "java/src/org/chromium/chrome/browser/usage_stats/UsageStatsMetricsReporter.java",
   "java/src/org/chromium/chrome/browser/usage_stats/UsageStatsService.java",
   "java/src/org/chromium/chrome/browser/usage_stats/WebsiteEvent.java",
   "java/src/org/chromium/chrome/browser/util/AccessibilityUtil.java",
