Measure Overview Animation as a whole.
This introduces FpsCounter which can measure multiple animtions
instead of individual transform animations.

This also splits the overview animation smoothness into
Clamshell/SingleClamshell/Tablet/SplitView because they
perform quite different animations.

No logical change but contains a few refacotring:
* notify OverviewGrid the cancelation of starting animation so
  that we can measure this scenario.
* Split the animation type computation and applying them so that
  we can specify the type of overview animation in fps counter.

Bug: 923159
Test: covered by unittests
Change-Id: I4cec30f1a327d349316786a0031251fd6420285d
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1526713
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#643072}(cherry picked from commit f2871ae8e1567110004b49c1311f07215641ff65 [formerly bdb60f94e9177e11ba3f0fac1ffea14d31b62444])
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1549986
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#644}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 5acf17f895f573269321d7a0e58a7243ad2c1e20

--- a/ash/public/cpp/BUILD.gn
+++ b/ash/public/cpp/BUILD.gn
@@ -59,6 +59,8 @@ component("cpp") {
     "default_frame_header.h",
     "default_scale_factor_retriever.cc",
     "default_scale_factor_retriever.h",
+    "fps_counter.cc",
+    "fps_counter.h",
     "frame_header.cc",
     "frame_header.h",
     "frame_utils.cc",
