Record PresentationTime and max latency for various drag operations
This introduces PresentationTimeRecorder, which records
the longest time between the time UI changes are requested and
the time thoese changes are presented (~ user perceived latency).

* Window/Tab dragging in overview mode
* Launcher dragging
* Divider dragging in splitview


Bug: 923159
Test: covered by unit tests. more test to be added.

Change-Id: Ic08bca5bc9cb06f0a25ffe7811524819618432c9
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1453364
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Daniele Castagna <dcastagna@chromium.org>
Reviewed-by: Steven Holte <holte@chromium.org>
Reviewed-by: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Alex Newcomer <newcomer@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#645364}(cherry picked from commit e1df2765827c25a884620d07dcba36b91cba2e8f [formerly 85156326da9b4db154e510a0f1b5f19cd19ed1dc])
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1549988
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/branch-heads/3729@{#646}
Cr-Branched-From: 19260737901ea731c9baac505269e4ad9638530d [formerly d4a8972e30b604f090aeda5dfff68386ae656267]-refs/heads/master@{#638880}
Former-commit-id: 3cf8ed10517f9a1eee33a83eb07257c8a06cad82

--- a/ash/public/cpp/BUILD.gn
+++ b/ash/public/cpp/BUILD.gn
@@ -87,6 +87,8 @@ component("cpp") {
     "notification_utils.h",
     "power_utils.cc",
     "power_utils.h",
+    "presentation_time_recorder.cc",
+    "presentation_time_recorder.h",
     "remote_shelf_item_delegate.cc",
     "remote_shelf_item_delegate.h",
     "rounded_corner_decorator.cc",
