--- a/ash/BUILD.gn
+++ b/ash/BUILD.gn
@@ -1673,6 +1673,7 @@ test("ash_unittests") {
     "metrics/histogram_macros_unittest.cc",
     "metrics/login_metrics_recorder_unittest.cc",
     "metrics/pointer_metrics_recorder_unittest.cc",
+    "metrics/presentation_time_recorder_unittest.cc",
     "metrics/task_switch_metrics_recorder_unittest.cc",
     "metrics/task_switch_time_tracker_unittest.cc",
     "metrics/user_metrics_recorder_unittest.cc",
