Revert "chromeos: Add test to drag a window/tab to overview in tablet mode"
This reverts commit 8e299a2c6182f71d5cb1af072fbf58705daa9707 [formerly ee9ec69109572f727fe50f0956ece2d7ecaa1e66].

Reason for revert:

Findit (https://goo.gl/kROfz5) identified CL at revision 647147 as the
culprit for flakes in the build cycles as shown on:
https://analysis.chromium.org/p/chromium/flake-portal/analysis/culprit?key=ag9zfmZpbmRpdC1mb3ItbWVyQwsSDEZsYWtlQ3VscHJpdCIxY2hyb21pdW0vZWU5ZWM2OTEwOTU3MmY3MjdmZTUwZjA5NTZlY2UyZDdlY2FhMWU2Ngw

Sample Failed Build: https://ci.chromium.org/buildbot/chromium.chromiumos/linux-chromeos-rel/22287

Sample Failed Step: non_single_process_mash_interactive_ui_tests

Sample Flaky Test: DragToOverviewTest.DragTab

Original change's description:
> chromeos: Add test to drag a window/tab to overview in tablet mode
> 
> - Add tests to drag window/tab to overview in tablet mode;
> - Fix UIControlsOzone to use host dips instead of host pixels
>   with EventInjector and use PointF to avoid rounding errors;
> 
> Bug: 942599
> Change-Id: I0325749cdd95d4b0c213d09f349083336ec3f3b0
> Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1546718
> Commit-Queue: Xiyuan Xia <xiyuan@chromium.org>
> Reviewed-by: Scott Violet <sky@chromium.org>
> Cr-Commit-Position: refs/heads/master@{#647147}

Change-Id: Id97df00e9b5ef2ceffe765fb791d121f25b8cd52
No-Presubmit: true
No-Tree-Checks: true
No-Try: true
Bug: 942599
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1551081
Cr-Commit-Position: refs/heads/master@{#647347}
Former-commit-id: d1cdbde04668e6c2bd7b0af527fab6bc8b1a12af

--- a/chrome/test/BUILD.gn
+++ b/chrome/test/BUILD.gn
@@ -5212,10 +5212,7 @@ if (!is_android) {
         # Use only the _chromeos version on Ash / Chrome OS.
         "../browser/ui/views/test/view_event_test_platform_part_default.cc",
       ]
-      sources += [
-        "../browser/ui/ash/drag_to_overview_interactive_uitest.cc",
-        "../browser/ui/ash/split_view_interactive_uitest.cc",
-      ]
+      sources += [ "../browser/ui/ash/split_view_interactive_uitest.cc" ]
     } else {  # ! is_chromeos
       # Non-ChromeOS notifications tests.
       sources += [
