Allow *_PI futex syscalls when mutex priority inheritance is enabled
Without this CL, mutexes with priority inheritance enabled appear to be
locked, but aren't actually, allowing multiple threads to enter critical
sections.

Change-Id: Ifa84526efdb17fa573a66cb2aa5a10f05783dbda
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1548249
Reviewed-by: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#647810}
Former-commit-id: 03fefaf7cdf1cceb136ea19e7a5baae45e81abc2

--- a/base/BUILD.gn
+++ b/base/BUILD.gn
@@ -58,6 +58,14 @@ declare_args() {
   enable_mutex_priority_inheritance = false
 }
 
+# Mutex priority inheritance is disabled by default due to security
+# vulnerabilities in older versions of Linux kernel and glibc. However,
+# Chromecast builds have full control over the platform and ensure that
+# the kernel and glibc versions used have patched the vulnerabilities,
+# so it is safe to use mutex priority inheritance on Chromecast platform.
+assert(!enable_mutex_priority_inheritance || is_chromecast,
+       "Do not enable PI mutexes without consulting the security team")
+
 # Determines whether libevent should be dep.
 dep_libevent = !is_fuchsia && !is_win && !(is_nacl && !is_nacl_nonsfi)
 
