--- a/components/viz/common/BUILD.gn
+++ b/components/viz/common/BUILD.gn
@@ -201,6 +201,8 @@ viz_component("common") {
     "traced_value.cc",
     "traced_value.h",
     "viz_common_export.h",
+    "viz_utils.cc",
+    "viz_utils.h",
   ]
 
   deps = [
