Upgrade the travis build environment to Xenial

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,7 @@
 # require Trusty so we have a modern version of texinfo (> 5.0) and
 # automake (> 1.14)
 sudo: required
-dist: trusty
-
-# the check-format test seems to fail with clang-format 5.0, so for
-# now stay with the older version of clang and hence the whole trusty
-# image
-group: deprecated-2017Q4
+dist: xenial
 
 language: c
 
