Change test to bothDirections
in order to demonstrate why this change was needed. Before, the
back-translated string contained latin letters.

--- a/tests/braille-specs/mn-MN_harness.yaml
+++ b/tests/braille-specs/mn-MN_harness.yaml
@@ -7,10 +7,12 @@ table:
   locale: mn
   contraction: no
   __assert-match: mn-MN-g1.utb
+flags: {testmode: bothDirections}
 tests:
-  - # Hello world  
-    - Сайн байна уу дэлхий
+  - - Сайн байна уу дэлхий
     - ⠠⠎⠁⠯⠝ ⠃⠁⠯⠝⠁ ⠥⠥ ⠙⠪⠇⠓⠊⠯
+  - - Брайль бичиг бол хараагүй хүний ертөнцийг харах цонх мөн.
+    - ⠠⠃⠗⠁⠯⠇⠾ ⠃⠊⠟⠊⠛ ⠃⠕⠇ ⠓⠁⠗⠁⠁⠛⠹⠯ ⠓⠹⠝⠊⠯ ⠑⠗⠞⠧⠝⠉⠊⠯⠛ ⠓⠁⠗⠁⠓ ⠉⠕⠝⠓ ⠍⠧⠝⠲
 
 # spaces
 table: mn-MN-g1.utb
