[WIP] split run-node.js into tools/{gen,run}.js

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/node": "^10.14.4",
+    "@types/node": "^12.0.8",
     "@webgpu/types": "0.0.3",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
@@ -31,10 +31,10 @@
     "grunt-contrib-clean": "^2.0.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-http-server": "^2.1.0",
+    "grunt-mkdir": "^1.0.0",
     "grunt-run": "^0.8.1",
     "grunt-ts": "^6.0.0-beta.22",
-    "minimist": "^1.2.0",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "^2.6.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.15.0",
     "typescript": "^3.4.3"
