--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@webgpu/types": "0.0.4",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-transform-commonjs-es2015-modules": "^4.0.1",
+    "clang-format": "^1.2.4",
     "fast-glob": "^3.0.0",
     "grunt": "^1.0.4",
     "grunt-babel": "^8.0.0",
@@ -36,10 +37,12 @@
     "grunt-mkdir": "^1.0.0",
     "grunt-run": "^0.8.1",
     "grunt-ts": "^6.0.0-beta.22",
+    "grunt-tsfmt": "^2.0.0",
     "node-fetch": "^2.6.0",
     "ts-node": "^8.3.0",
     "tslint": "^5.15.0",
-    "typescript": "^3.4.3"
+    "typescript": "^3.4.3",
+    "typescript-formatter": "^7.2.2"
   },
   "dependencies": {
     "@webgpu/shaderc": "0.0.4"
