refactor loader as a class; make tools typed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,6 +29,6 @@
     "baseUrl": "./src",
   },
   "include": [
-    "./src",
+    "./src", "tools/run.ts", "tools/setup-ts-in-node.js", "tools/gen.ts",
   ]
 }
