Add a test with Latin letters
to demonstrate that the UEB include still works. The test can not be
run in bothDirections mode however because the Cyrillic letters now
have precedence.

--- a/tests/braille-specs/mn-MN_harness.yaml
+++ b/tests/braille-specs/mn-MN_harness.yaml
@@ -14,6 +14,11 @@ tests:
   - - Брайль бичиг бол хараагүй хүний ертөнцийг харах цонх мөн.
     - ⠠⠃⠗⠁⠯⠇⠾ ⠃⠊⠟⠊⠛ ⠃⠕⠇ ⠓⠁⠗⠁⠁⠛⠹⠯ ⠓⠹⠝⠊⠯ ⠑⠗⠞⠧⠝⠉⠊⠯⠛ ⠓⠁⠗⠁⠓ ⠉⠕⠝⠓ ⠍⠧⠝⠲
 
+flags: {testmode: forward}
+tests:
+  - - The only thing worse than being blind is having sight but no vision.
+    - ⠠⠞⠓⠑ ⠕⠝⠇⠽ ⠞⠓⠊⠝⠛ ⠺⠕⠗⠎⠑ ⠞⠓⠁⠝ ⠃⠑⠊⠝⠛ ⠃⠇⠊⠝⠙ ⠊⠎ ⠓⠁⠧⠊⠝⠛ ⠎⠊⠛⠓⠞ ⠃⠥⠞ ⠝⠕ ⠧⠊⠎⠊⠕⠝⠲
+
 # spaces
 table: mn-MN-g1.utb
 flags: {testmode: bothDirections}
