Implement downloads pause/resume flow
This patch implements controls for downloads. The new UI exists as a
separate activity and is triggered by the download notification. The
UI is one-per download and contains the title of the affected
download, a pause/resume button, and a cancel button.

TBR=mdjones@chromium.org

(cherry picked from commit b89ec80fa41bcde3d9c42d1de1eab3f116f842a6 [formerly 06d8dbc12c052594ca3b0faea49ffa7eeab0c6a7])

Bug: 969220
Change-Id: Id064a2b1a0b9159e3f9f8d1dba5badddd65920e0
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1663056
Commit-Queue: Matthew Jones <mdjones@chromium.org>
Reviewed-by: Theresa <twellington@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Reviewed-by: Shakti Sahu <shaktisahu@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#670960}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1670130
Reviewed-by: Matthew Jones <mdjones@chromium.org>
Cr-Commit-Position: refs/branch-heads/3809@{#454}
Cr-Branched-From: ce45438777a60f42f88228700b3968406c6404d8 [formerly d82dec1a818f378c464ba307ddd9c92133eac355]-refs/heads/master@{#665002}

Former-commit-id: 811056022ce36b8ffb5b02088ba9996f8c0291db

--- a/chrome/android/touchless/touchless_java_sources.gni
+++ b/chrome/android/touchless/touchless_java_sources.gni
@@ -3,6 +3,7 @@
 # found in the LICENSE file.
 
 touchless_java_sources = [
+  "touchless/java/src/org/chromium/chrome/browser/download/TouchlessDownloadActivity.java",
   "touchless/java/src/org/chromium/chrome/browser/touchless/AboveTheFoldViewHolder.java",
   "touchless/java/src/org/chromium/chrome/browser/touchless/ContentSuggestionsViewBinder.java",
   "touchless/java/src/org/chromium/chrome/browser/touchless/DinoActivity.java",
@@ -78,6 +79,7 @@ touchless_junit_test_java_sources = [
 ]
 
 touchess_fallback_java_sources = [
+  "touchless/fallback/java/src/org/chromium/chrome/browser/download/TouchlessDownloadActivity.java",
   "touchless/fallback/java/src/org/chromium/chrome/browser/touchless/TouchlessDelegate.java",
   "touchless/java/src/org/chromium/chrome/browser/touchless/TouchlessModelCoordinator.java",
   "touchless/java/src/org/chromium/chrome/browser/touchless/TouchlessUiCoordinator.java",
