Copy KeystoneRegistration.framework with a bundle_data rule for the root.
This approach is inherently problematic because ninja will only stat the
outer .framework directory, which will not cause the contents to be
recopied if only an internal component (like the actual shared library)
is changed. In practice, this does not matter because the official
builds that actually copy KeystoneRegistration are always clobber
builds.

Several other attempts at using bundle_data rules to copy, and thus
stat, the individual components of KeystoneRegistration framework have
failed. The internal symbolic links present issues because ninja will
only stat the link target and not the link itself. See the linked bug
for previous attempts and discussion.

Bug: 955936
Change-Id: I74f304c0170d7926f42bfd53e928f6fc8db57ef5
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1669409
Commit-Queue: Robert Sesek <rsesek@chromium.org>
Reviewed-by: Mark Mentovai <mark@chromium.org>
Cr-Commit-Position: refs/heads/master@{#671121}

Former-commit-id: c2b068a99ae2254afedc0ca88a0a334b7221ff61

--- a/chrome/BUILD.gn
+++ b/chrome/BUILD.gn
@@ -1175,11 +1175,18 @@ if (is_win) {
     }
   }
 
-  group("keystone_registration_framework") {
-    if (is_chrome_branded && enable_keystone_registration_framework) {
-      deps = [
-        "//third_party/googlemac/Releases/Keystone:keystone_registration",
+  if (is_chrome_branded && enable_keystone_registration_framework) {
+    bundle_data("keystone_registration_framework") {
+      sources = [
+        "//third_party/googlemac/Releases/Keystone/KeystoneRegistration.framework",
       ]
+
+      outputs = [
+        "{{bundle_contents_dir}}/Frameworks/{{source_file_part}}",
+      ]
+    }
+  } else {
+    group("keystone_registration_framework") {
     }
   }
 
