--- a/chrome/android/chrome_java_sources.gni
+++ b/chrome/android/chrome_java_sources.gni
@@ -514,6 +514,7 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/download/DownloadUmaStatsEntry.java",
   "java/src/org/chromium/chrome/browser/download/DownloadUpdate.java",
   "java/src/org/chromium/chrome/browser/download/DownloadUtils.java",
+  "java/src/org/chromium/chrome/browser/download/ExploreOfflineStatusProvider.java",
   "java/src/org/chromium/chrome/browser/download/OMADownloadHandler.java",
   "java/src/org/chromium/chrome/browser/download/SystemDownloadNotifier.java",
   "java/src/org/chromium/chrome/browser/download/home/DownloadManagerCoordinator.java",
