Rearranged mutator pipeline
This CL moves out the mutator logic from mediator to a separate
ListMutationController class, which will control the chain of sorter,
labe adder, paginator, property setter, and model.

(cherry picked from commit 21dbad099cde26bd09540e5eb34c0ff9b8b34a0c [formerly cad8ddabebcdef8d240d22e80413726ae0ff23bf])

Bug: 1032822
Change-Id: I6ddd1d7c94bae5fdb3fc71d0086a476e10f189c6
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1956499
Reviewed-by: Shakti Sahu <shaktisahu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Shakti Sahu <shaktisahu@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#723715}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/1966588
Cr-Commit-Position: refs/branch-heads/3987@{#110}
Cr-Branched-From: f8ec429d946866f630bf422440e162a16c8b97d1 [formerly c4e8da9871cc266be74481e212f3a5252972509d]-refs/heads/master@{#722274}

Former-commit-id: 0f59ecdc127bd192d47bb90675a878db81bb51f7

--- a/chrome/android/chrome_java_sources.gni
+++ b/chrome/android/chrome_java_sources.gni
@@ -595,7 +595,9 @@ chrome_java_sources = [
   "java/src/org/chromium/chrome/browser/download/home/list/mutator/DateLabelAdder.java",
   "java/src/org/chromium/chrome/browser/download/home/list/mutator/DateOrderedListMutator.java",
   "java/src/org/chromium/chrome/browser/download/home/list/mutator/GroupCardLabelAdder.java",
+  "java/src/org/chromium/chrome/browser/download/home/list/mutator/ListConsumer.java",
   "java/src/org/chromium/chrome/browser/download/home/list/mutator/ListItemPropertySetter.java",
+  "java/src/org/chromium/chrome/browser/download/home/list/mutator/ListMutationController.java",
   "java/src/org/chromium/chrome/browser/download/home/list/mutator/NoopLabelAdder.java",
   "java/src/org/chromium/chrome/browser/download/home/list/mutator/PrefetchListPaginator.java",
   "java/src/org/chromium/chrome/browser/download/home/list/mutator/ScoreComparator.java",
