--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 out/
 out-wpt/
+# Copied from @webgpu/types during build (as a hack to avoid having any "real"
+# dependencies, which makes it easier to get the output in the out/ directory
+# to be self-contained).
+/src/constants.ts
+
 *.code-workspace
 
 .tscache/
