--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@webgpu/glslang": "^0.0.12",
     "@webgpu/types": "0.0.21",
     "babel-plugin-add-header-comment": "^1.0.3",
+    "babel-plugin-const-enum": "^0.0.5",
     "babel-plugin-macros": "^2.8.0",
     "clang-format": "^1.3.0",
     "fast-glob": "^3.1.1",
