--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "grunt-run": "^0.8.1",
     "grunt-ts": "^6.0.0-beta.22",
     "gts": "^1.1.2",
+    "quiet-grunt": "^0.2.3",
     "ts-node": "^8.5.4",
     "tslint": "^5.20.1",
     "typescript": "~3.7.4",
