Add LIBGAV1_THREADPOOL_USE_STD_MUTEX as config var
Add LIBGAV1_THREADPOOL_USE_STD_MUTEX as a cmake configuration variable.
This allows building the libgav1 core library with no Abseil dependency.

Note: I wrote this CL by imitating how LIBGAV1_MAX_BITDEPTH is handled.

PiperOrigin-RevId: 291992700
Change-Id: Ia18002d8a84071b8426050c8581e6706f040e729

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,9 @@ libgav1_track_configuration_variable(LIBGAV1_SANITIZE)
 # Generated source file directory.
 libgav1_track_configuration_variable(LIBGAV1_GENERATED_SOURCES_DIRECTORY)
 
+# Controls use of std::mutex and absl::Mutex in ThreadPool.
+libgav1_track_configuration_variable(LIBGAV1_THREADPOOL_USE_STD_MUTEX)
+
 if(LIBGAV1_VERBOSE)
   libgav1_dump_cmake_flag_variables()
   libgav1_dump_tracked_configuration_variables()
