cmake, vmaf: set lib and so LINKER_LANGUAGE to CXX.
More information about this in the bug. On FreeBSD bfd cannot
resolve libvmaf's depedencies without this change.

BUG=aomedia:2472

Change-Id: I6e3b6a064ddd88b066a1a28965f86d0384af6507

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -429,6 +429,10 @@ if(CONFIG_AV1_ENCODER)
       message(FATAL_ERROR "VMAF library not found.")
     endif()
     message("-- Found VMAF library: " ${VMAF})
+    set_target_properties(aom PROPERTIES LINKER_LANGUAGE CXX)
+    if(BUILD_SHARED_LIBS)
+      set_target_properties(aom_static PROPERTIES LINKER_LANGUAGE CXX)
+    endif()
     target_link_libraries(aom PRIVATE ${VMAF})
   endif()
 endif()
